--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <p>
             second paragraph 
         </p>
+        <p>
+            third paragraph
+        </p>
     </body>
     
 </html>
